--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,10 @@
 
 :root {
     --main-text-color: #E3E3E3;
-    --highlight-color: #363636;
+    --highlight-color: #DE4C4A;
+    --hover-color: #363636;
+    --outline-color: #808080;
+    --main-bg-color: #1F1F1F;
 }
 
 
@@ -31,6 +34,9 @@ body {
     flex-direction: column;
 }
 
+.hidden {
+    display: none;
+}
 
 /* || Sidebar */
 
@@ -45,9 +51,6 @@ body {
     padding-left: 0.5rem;
     font-size: 1.1rem;
     font-weight: 700;
-}
-
-.heading span {
     margin-bottom: 0.5rem;
 }
 
@@ -68,35 +71,39 @@ body {
     border-radius: 5px;
 }
 
-.newProject:hover, .projectsEntry:hover {
-    background-color: var(--highlight-color);
+.newProject:hover, .projectsEntry:hover, .todoRight>button:hover {
+    background-color: var(--hover-color);
 }
 
 
 /* || Main */
 
 main {
-    background-color: #1F1F1F;
+    background-color: var(--main-bg-color);
     justify-content: center;
 }
 
 .projectDisplay {
-    width: 75%;
+    width: 90%;
     padding: 2rem;
 }
 
 .projectTitle {
     font-size: 1.5rem;
     font-weight: 700;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
-.projectList {
+#projectsList, .todosList {
     list-style-type: none;
 }
 
-.projectList>li {
-    border-top: 1px solid #363636;
+.todosList>li {
+    border-top: 1px solid var(--hover-color);
+}
+
+.todosList>li:first-child {
+    border: none;
 }
 
 .projectTodo, .addTask {
@@ -112,10 +119,29 @@ main {
 }
 
 .taskCheckbox {
-    border: 1px solid #E3E3E3;
+    border: 1px solid var(--outline-color);
+    transition: 0.3s;
 }
 
-.taskCheckbox, .addTask button {
+.taskCheckbox:hover {
+    background-color: var(--outline-color);
+    transition: 0.3s;
+}
+ 
+.todoRight {
+    column-gap: 1rem;
+    color: var(--outline-color);
+}
+
+.todoRight>button {
+    border: 0;
+    border-radius: 5px;
+    background-color: transparent;
+    color: var(--main-text-color);
+    height: 24px;
+} 
+
+.taskCheckbox, .addTaskBtn {
     height: 16px;
     width: 16px;
     border-radius: 50%;
@@ -123,19 +149,99 @@ main {
     background-color: transparent;
 }
 
-.addTask button { 
-    line-height: 16px;
+.addTaskBtn { 
+    line-height: 1rem;
 }
 
 .addTask span {
-    color: #808080;
+    color: var(--outline-color);
 }
 
-.addTask:hover span, .addTask button {
-    color: #DE4C4A;
+.addTask:hover span, .addTaskBtn {
+    color: var(--highlight-color);
 }
 
-.addTask:hover button {
-    color:#E3E3E3;
-    background-color: #DE4C4A;
+.addTask:hover .addTaskBtn {
+    color: var(--main-text-color);
+    background-color: var(--highlight-color);
+}
+
+/* Add Task Menu */
+.addTaskMenuWrapper {
+    padding-top: 0.5rem;
+}
+
+.addTaskMenu, #formTodoDueDate, #formTodoPriority {
+    border: 1px solid var(--hover-color);
+}
+
+.addTaskMenu, #formTodoDueDate, #formTodoPriority {
+    border-radius: 10px;
+    padding: 0.5rem;
+}
+
+#formTodoName, #formTodoDueDate, #formTodoDesc, #formTodoPriority {
+    background-color: var(--main-bg-color);
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--main-text-color);
+    outline: none;
+}
+
+#formTodoDueDate, #formTodoPriority {
+    border-radius: 5px;
+    padding: 0.25rem;
+}
+
+::-webkit-calendar-picker-indicator {
+    color-scheme: dark;
+}
+
+#formTodoName, #formTodoDesc {
+    width: 100%;
+}
+
+#formTodoName {
+    height: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+#formTodoDesc {
+    resize: none;
+    overflow-y: scroll;
+    padding-right: 1rem;
+}
+
+.addTaskMenuButtons {
+    margin-top: 0.5rem;
+    column-gap: 0.75rem;
+}
+
+.addTaskMainBtn {
+    background-color: var(--highlight-color);
+}
+
+.addTaskMainBtn:hover:enabled{
+    background-color: #C53727;
+}
+
+.addTaskMainBtn:disabled {
+    filter: brightness(0.8);
+}
+
+.addTaskCancelBtn {
+    background-color: #292929;
+}
+
+.addTaskCancelBtn:hover {
+    background-color: #3D3D3D;
+}
+
+.addTaskMainBtn, .addTaskCancelBtn {
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    color: var(--main-text-color);
+    font-size: 1rem;
+    padding: 0.5rem 0.75rem;
 }
