--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@
 body {
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 2fr 3fr;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--main-text-color);
 }
@@ -75,11 +75,11 @@ body {
     background-color: var(--hover-color);
 }
 
-.projectMoreOptionsBtn, .newProjectBtn {
+.projectBtnsWrapper button, .newProjectBtn {
     display: none;
 }
 
-.projectsEntry:hover .projectMoreOptionsBtn, #addProject:hover .newProjectBtn {
+.projectsEntry:hover .projectBtnsWrapper button, #addProject:hover .newProjectBtn {
     display: initial;
 }
 
@@ -147,7 +147,7 @@ main {
     color: var(--outline-color);
 }
 
-.todoRight>button, .projectMoreOptionsBtn {
+.todoRight>button, .projectBtnsWrapper>button {
     border: 0;
     border-radius: 5px;
     background-color: transparent;
