--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 /* || Custom properties */
 
 :root {
-    --main-text-color: #E3E3E3;
+    --main-text-color: #EEEEEE;
     --highlight-color: #DE4C4A;
     --hover-color: #363636;
     --outline-color: #808080;
@@ -288,4 +288,68 @@ input[type="text"], textarea {
     color: var(--main-text-color);
     font-size: 0.9rem;
     padding: 0.5rem 0.75rem;
+}
+
+/* || Modal */
+
+
+
+.modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #000000;
+    background-color: #00000040;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalContent {
+    width: 100%;
+    max-width: 45%;
+    min-height: 45%;
+    background-color: var(--sidebar-color);
+    border-radius: 10px;
+    padding: 2rem;
+    row-gap: 1rem;
+}
+
+.modalHeader {
+    justify-content: space-between;
+}
+
+.modalProjectTitle {
+    font-size: 1.1rem;
+}
+
+.modalCloseBtn {
+    background-color: transparent;
+}
+
+.modalCloseBtn:hover svg {
+    stroke: var(--main-text-color);
+}
+
+.modalTodoTitle {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.modalTodoDescription {
+    max-height: 25vh;
+    overflow-y: scroll;
+}
+
+.modalTodoInfo {
+    column-gap: 0.5rem;
+}
+
+.modalTodoInfo>div {
+    border: 1px solid var(--outline-color);
+    border-radius: 5px;
+    padding: 0.3rem 0.6rem;
 }
